--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -1,5 +1,11 @@
+@import "./variables.scss";
+
 * {
   box-sizing: border-box;
+  color: $colour1;
   font-family: sans-serif;
+  list-style: none;
   margin: 0;
+  outline: none;
+  text-decoration: none;
 }
