--- a/client/src/components/utils/routes/style.scss
+++ b/client/src/components/utils/routes/style.scss
@@ -1,3 +1,14 @@
+@import "../../../variables.scss";
+
 .route {
   padding: 6px 6%;
+}
+
+.private-link {
+  border: 1px solid black;
+  bottom: 21px;
+  cursor: pointer;
+  padding: 6px;
+  position: absolute;
+  right: $horizontalPadding;
 }
