--- a/client/src/components/layout/style.scss
+++ b/client/src/components/layout/style.scss
@@ -11,6 +11,7 @@
   .navbar-links {
     display: flex;
     .navbar-link {
+      cursor: pointer;
       margin: 0 3px;
       .navlink {
         border-bottom: 2px solid;
