created form components

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -3,3 +3,6 @@ $colour2: #ffffff;
 
 $horizontalPadding: 6%;
 $padding1: 6px $horizontalPadding;
+
+$header-height: 12vh;
+$route-title-height: 28px;
