--- a/client/src/components/utils/style.scss
+++ b/client/src/components/utils/style.scss
@@ -9,5 +9,12 @@
 }
 
 .input1 {
-  text-align: center;
+  display: grid;
+  grid-template-columns: 90px auto;
+  .input-label::after {
+    content: ": ";
+  }
+  .text-area {
+    height: 120px;
+  }
 }
