--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -4,5 +4,7 @@ $colour2: #ffffff;
 $horizontalPadding: 6%;
 $padding1: 6px $horizontalPadding;
 
-$header-height: 12vh;
+$header-height: 42px;
 $route-title-height: 28px;
+
+$bio-image-width: 280px;
