--- a/client/src/components/utils/routes/style.scss
+++ b/client/src/components/utils/routes/style.scss
@@ -1,15 +1,15 @@
 @import "../../../variables.scss";
 
 .route {
-  max-height: 100vh - $header-height;
+  max-height: 90vh;
   overflow-y: scroll;
   padding: 6px 6%;
   .route-title {
     height: $route-title-height;
     position: fixed;
+    z-index: 100;
   }
   .route-content {
-    min-height: 100vh - $header-height;
     padding-top: $route-title-height;
   }
 }
