--- a/client/src/components/utils/style.scss
+++ b/client/src/components/utils/style.scss
@@ -60,6 +60,7 @@
   margin: 0 auto 6px;
   max-height: 210px;
   overflow: hidden;
+  position: relative;
   width: 140px;
   .work-card-image-container {
     border-bottom: 1px solid $colour1;
@@ -85,6 +86,44 @@
       padding: 6px 2%;
       text-align: justify;
     }
+  }
+}
+
+.buttons {
+  position: absolute;
+  right: 0;
+  top: 0;
+  .edit-button {
+    i {
+      color: blue;
+    }
+  }
+  .delete-button {
+    cursor: pointer;
+    i {
+      color: red;
+    }
+  }
+}
+
+.delete-options {
+  background-color: $colour2;
+  height: 297px;
+  left: 0;
+  position: absolute;
+  text-align: center;
+  top: 0;
+  width: 100%;
+  .delete-option-info {
+    font-size: 14px;
+    padding: 12px 2%;
+  }
+  .delete-option {
+    color: blue;
+    cursor: pointer;
+  }
+  .delete-option:nth-child(3) {
+    color: red;
   }
 }
 
